<resources>
    <string name="app_name_accessibility_service">Ad Skipper Accessibility Service</string>
    <string name="accessibility_service_description">Accessibility Service needs to be turned on for the app to function correctly.</string>
    <string name="exhausted_trail_hint">You\'ve exhausted your free usage. Watch an ad to earn 15 additional free skips!</string>
    <string name="first_ad_skip_hint">Great! We skipped an ad for you.</string>
    <string name="language_selected_hint">Language</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="how_does_it_work_sub_header">This app is customized to exclusively bypass YouTube ads that present a \"Skip\" option after a 5-second countdown. \n\nIt\'s essential to note that this app is designed to interact with ads of this particular kind.</string>
    <string name="start_service">Start Service</string>
    <string name="usage">Usage</string>
    <string name="upgrade">Upgrade</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="service_running">Service Running</string>
    <string name="text_continue">Next</string>
    <string name="exhausted_trail_sub_hint">Free tier exhausted</string>
    <string name="click_to_upgrade">Click to upgrade</string>
    <string name="see_image">See image</string>
    <string name="change_language">Change Language</string>
    <string name="boost_service">Boost Service</string>
    <string name="report_problem">Report Problem</string>
    <string name="premium_user">Premium User</string>

    <string name="infinity" translatable="false">&#8734;</string>
    <string name="open_youtube">Open YouTube</string>
    <string name="watch_ad_hint">Watch an ad to earn 15 additional free skips!</string>
</resources>
